# gpdiz

./: .gitignore  README.md  execute  requirements.txt
docker/builder/: Dockerfile  Makefile  bldr_env.sh  bldr_execute
docker/dzbld/: Dockerfile  Makefile  bldr_python  dot.pylintrc  packages.txt  requirements.txt
docker/reference/: Dockerfile  Makefile  igor_build_layer  igor_env.sh  igor_execute  igor_go  igor_hcl  igor_iac  igor_packer  igor_pkg  igor_pulumi  igor_python  igor_sphinx  igor_tex  packages.txt  requirements.txt
python/gpdiz/: Makefile  Makefile-orig  README.md  local-install  pyproject.toml  tbump.toml
python/gpdiz/gpdiz/: __init__.py  __main__.py  diz.py  dizself.py  dsp.py  factory.py  flacfile.py  inifile.py  libfile.py  library.py  mp3file.py  signal.py  sudoku.py  treewalker.py
python/gpdiz/tests/: puzzle01.txt  puzzle02.txt  puzzle03.txt  test_filesystem.py  test_gpdiz.py  test_profiles.py
python/gpdsp/: Makefile  README.md  pyproject.toml  pytest.ini  tbump.toml
python/gpdsp/gpdsp/: __init__.py
utils/: kg_audbook  kg_hra  kg_mp3
