[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpdsp"
version = "0.0.0"
authors = [{ name = "Grid Presence", email = "grid.presence@gmx.com" }]
description = "Digital Signal Processing"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
]
